--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,110 @@
 body {
-  margin: 0;
+  margin: 20px;
+  background-color: #11111d;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  color: #d0d0d7;
+  .container {
+    .scroll {
+      overflow: auto;
+    }
+    .list {
+      background-color: #1c1c27;
+      display: flex;
+      flex-direction: column;
+      @media (max-width: 800px) {
+        min-width: 660px;
+      }
+      .header {
+        align-items: center;
+        height: 50px;
+        border-bottom: 1px solid #d0d0d7;
+        display: flex;
+        padding: 0 20px;
+        h4 {
+          width: 20%;
+          &:last-child {
+            text-align: center;
+            @media (max-width: 800px) {
+              width: 30%;
+            }
+          }
+        }
+      }
+      .info {
+        align-items: center;
+        display: flex;
+        padding: 0 20px;
+        &:nth-of-type(even) {
+          background-color: #11111d;
+        }
+        .item {
+          width: 20%;
+          &:last-child {
+            display: flex;
+            text-align: center;
+            @media (max-width: 800px) {
+              width: 30%;
+            }
+          }
+          
+        }
+      }
+    }
+    .card {
+      background-color: #1c1c27;
+      border: 1px solid #d0d0d7;
+      border-radius: 10px;
+      margin: 0 auto 20px;
+      padding: 0 20px 20px 20px;
+      width: 400px;
+      h3 {
+        text-align: center;
+      }
+      .form {
+        align-items: center;
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 10px;
+        .inputText {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+        }
+        .buttons {
+          display: flex;
+          width: 100%;
+          gap: 15px;
+          margin-top: 10px;
+          
+        }
+      }
+      @media(max-width: 500px) {
+        width: 85%;
+      }
+    }
+    button {
+      width: 50%;
+      background-color: transparent;
+      color: #fff;
+      border: 1px solid #d0d0d7;
+      border-radius: 5px;
+      padding:10px 15px;
+      margin: 0 3px;
+      &:hover {
+        color: #62af58;
+        border-color: #62af58;
+        &:last-child {
+          color: #ff4e4e;
+          border-color: #ff4e4e;
+        }
+      }
+      &.add {
+        margin-bottom: 20px;
+        width: unset;
+      }
+    }
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
